Update .gitignore and remove dist/ and *.egg-info/ from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/venv
+# Packaging artifacts
+dist/
+build/
+*.egg-info/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+
+# Virtual environment
+venv/
