--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@ examples/
 # TO-DO
 todo
 
-# READEME.md not ready to be githubed
-*.md
+# README.md not ready to be githubed
+# *.md
 
 AirSpaceSim.csv
+*.bat
