feat: complete roadmap hardening, contracts, architecture, and CI generation
- finalize simulation/runtime contract system:
  - add unified scenario input (airspacesim.scenario v0.1)
  - add trajectory output contract (airspacesim.trajectory v0.1)
  - keep backward compatibility for legacy/split contracts
  - publish schema artifacts under airspacesim/schemas

- strengthen ingestion/runtime architecture:
  - add EventIngestionAdapter interface with poll/ack contract
  - implement FileEventAdapter + StdinEventAdapter conformance behavior
  - enforce deterministic ordering and idempotency in event flow

- decouple UI/backend and stabilize frontend runtime behavior:
  - add ui_runtime.v1 adapter contract for frontend source mapping
  - align JS path resolution with generated project layout
  - improve frontend missing/read-error handling and polling config

- improve simulation core and maintainability:
  - add typed core models and stable interfaces in airspacesim/core
  - add ManagerStepper adapter and framework-agnostic core guard tests
  - integrate typed trajectory track generation in runtime output path

- add interoperability tooling:
  - implement trajectory JSON -> CSV exporters
  - add end-to-end interoperability export example and docs

- improve install/test reliability:
  - add offline editable bootstrap installer script
  - add docs quickstart and phase-1 clean-run smoke tests
  - enforce baseline coverage gate in pytest session (configurable threshold)

- add CI support via intent-cli:
  - initialize and tune intent.toml for this repo
  - generate .github/workflows/ci.yml and justfile using intent sync
  - configure CI matrix for Python 3.10/3.11/3.12 with pytest + ruff

- update docs/ADRs/roadmap extensively:
  - architecture, contracts, migration, ingestion, compatibility matrix, glossary
  - add ADR 0004 for core domain interfaces
  - mark completed roadmap items and clarify CI remote-pass pending status

- update gitignore for local/offline/tool cach

--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,20 @@ __pycache__/
 
 # Virtual environment
 venv/
+.venv/
+.venv-offline/
 
 # The project how to for me
 how_to
 
 # PyPISettings
 PyPISettings.txt
-airspacesim/data
+# Keep generated root-level examples ignored, but track package defaults.
 examples/
+airspacesim/data/*
+!airspacesim/data/*.json
+!airspacesim/examples/
+!airspacesim/examples/*.py
 
 # TO-DO
 todo
@@ -27,5 +33,26 @@ todo
 AirSpaceSim.csv
 *.bat
 
-# roadmap
-roadmap.md
+# Local runtime artifacts from `airspacesim init` runs
+data/
+static/
+templates/
+logs/
+
+# Local tool/runtime caches
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+.coverage
+.coverage.*
+htmlcov/
+
+# Potential local Intent cache/state dirs
+.intent/
+.intent-cache/
+
+# Local manual playgrounds
+airspacesim-playground/
+
+# palyground
+airspacesim-palyground/
