feat: harden operator event flow and align docs with live runtime behavior
- enforce duplicate-aircraft protection for ADD_AIRCRAFT events
- improve SET_SPEED diagnostics when callsign is provided instead of aircraft_id
- keep speed guardrail behavior explicit in runtime docs
- document working dev_server event sink flow for playground and root map URLs
- document operator payload rules, 405/static-server failure mode, and restart replay behavior
- add tests for duplicate add handling and callsign-vs-id speed update error hints
- update roadmap with post-v0.5 operational improvement backlog

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,12 @@ htmlcov/
 .intent/
 .intent-cache/
 
+# Editor/IDE state
+.vscode/
+.idea/
+*.swp
+*.swo
+
 # Local manual playgrounds
 airspacesim-playground/
 
