chore(release): prepare AirSpaceSim 0.1.3 for PyPI
- bump package version to 0.1.3
- strengthen PyPI metadata in pyproject (classifiers, project URLs)
- move license-files to [project] for modern setuptools compatibility
- add build/twine to requirements-dev for standard release workflow
- update .gitignore for local publishing credentials and build metadata
- add explicit PyPI release checklist to README and documentation
- update roadmap reference to new_roadmap.md
- verify quality gate (pytest, ruff) and generate sdist/wheel artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 dist/
 build/
 *.egg-info/
+pip-wheel-metadata/
+*.egg
+
+# Release / publishing local files
+.pypirc
+.testpypirc
+.env.pypi
+release.env
 
 # Python cache files
 __pycache__/
@@ -62,3 +70,8 @@ airspacesim-playground/
 
 # palyground
 airspacesim-palyground/
+
+# ideas
+ideas.md
+
+new_roadmap.md
