--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "AirSpaceSim"
-version = "0.1.2"
+version = "0.1.3"
 description = "A modular library for aircraft simulation, airspace and route visualization, and flight tracking."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -12,9 +12,16 @@ authors = [
   { name = "sankarebarri", email = "sankarebarri_dev@yahoo.com" }
 ]
 license = "MIT"
+license-files = ["LICENSE"]
 dependencies = []
 classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "Topic :: Scientific/Engineering :: Visualization",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
 ]
 keywords = [
@@ -29,6 +36,8 @@ keywords = [
 
 [project.urls]
 Homepage = "https://github.com/sankarebarri/AirSpaceSim"
+Repository = "https://github.com/sankarebarri/AirSpaceSim"
+Issues = "https://github.com/sankarebarri/AirSpaceSim/issues"
 
 [project.scripts]
 airspacesim = "airspacesim.cli.commands:main"
@@ -39,7 +48,6 @@ pythonpath = ["."]
 
 [tool.setuptools]
 include-package-data = false
-license-files = ["LICENSE"]
 
 [tool.setuptools.packages.find]
 where = ["."]
